Hope page links fixed and overlap of image and text on mobile screen fixed

--- a/app/css/mobile_media.css
+++ b/app/css/mobile_media.css
@@ -131,6 +131,7 @@
     width: 100%;
     text-align: left;
     padding: 340px 16px 0;
+    position: relative;
   }
   .post-1 .content .title {
     margin-top: 0;
